# thesis_code

./: .gitignore  README.md  make_hagan_checkpoint.ipynb  metrics.csv  nii_gz_files.txt  pyproject.toml  requirements.txt  todo.md
Jensen work/VAE/: test_wrapper.py  train_model.py  wrapper.py
Jensen work/callbacks/: __init__.py  callbacks.py
Jensen work/pre_training/: pretrain.py
data-collection/: collect_data.sh  download_and_extract_data.sh  download_and_process_data.py  download_and_process_data.sh  download_and_process_data_slurm.sh  download_dataset.py  extract_dataset.py  pretrain-dataset-choices.md  process_dataset.py  slurm_collect_data.sh  utils.py  zsh_test.py
data_collection/: apply_fsl_xform.sh  apply_transformations.sh  collect_data.sh  count_nii_metadata.py  gzip_files_in_folder.sh  split_data.py  transform_all_nii.m
dataloading/: mri_dataloader.py  mri_datamodule.py  mri_dataset.py  transforms.py  utils.py
dp_to_be_cleaned/: test_vqvae.py
dp_to_be_cleaned/dp_finetune/: load_checkpoint_test.py  test_wrapper.py  wrapper.py
evaluation/: generate_n_sampled_mris.py  make_hagan_checkpoint.ipynb  plotting.ipynb  slurm_generate_n_sampled_mris_l5.sh
fastsurfer/: run_fastsurfer.sh
models/: cicek_3d_vae.py
tests/dataloading/: test_mri_datamodule.py  test_mri_dataset.py  test_transforms.py  test_utils.py
tests/metrics/: test_ssi_3d.py
tests/models/: test_cicek_3d_vae.py  test_hagan.py
thesis_code/: __init__.py
thesis_code/data_collection/: apply_mask_to_mris.py  collect_data.sh  convert_dicom_2_nifti.py  copy_masks_to_data_folder.py  data_collection_notes.md  find_all_nii_files.py  get_nii_file_metadata.py  pretrain-dataset-choices.md  reorient_and_reshape_niftis.py  reorient_nii.py  slurm_apply_mask_to_mris.sh  slurm_apply_mask_to_mris_finetune.sh  slurm_copy_masks_to_data_folder.sh  split_data.py  test_script.sh  testing_python.py
thesis_code/dataloading/: __init__.py  mri_dataloader.py  mri_datamodule.py  mri_dataset.py  mri_sample.py  preprocess_example.py  slurm_preprocess_example.sh  transforms.py  utils.py
thesis_code/evaluation/: plot_training_curves.py  slurm_finetume_vectorize_test_dataset.sh  slurm_generate_n_sampled_mris_author.sh  slurm_generate_n_sampled_mris_l1.sh  slurm_generate_n_sampled_mris_l5.sh  slurm_vectorize_test_dataset.sh  view_mri_3d.py  (+1 more)
training/: pre_training.py  pretrain.py  test_wrapper.py  wrapper.py
(+209 files in other folders)
