[tool.poetry]
name = "thesis-code"
version = "0.1.0"
description = "All code related to our thesis at BARC at the University of Copenhagen."
authors = [
    "Rasmus Pallisgaard <dwp992@alumni.ku.dk>",
    "Rasmus Egholm Bruun Jensen <gzj557@alumni.ku.dk>",
]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
torch = "2.2.2"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
jax = "^0.4.33"
jaxlib = "^0.4.33"
flax = "^0.9.0"
optax = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
