[tool.poetry]
name = "thesis_code"
version = "0.1.0"
description = "All code related to our thesis at BARC at the University of Copenhagen."
authors = [
    "Rasmus Pallisgaard <dwp992@alumni.ku.dk>",
    "Rasmus Egholm Bruun Jensen <gzj557@alumni.ku.dk>",
]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "models" },
    { include = "training" },
    { include = "dataloading" },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
torch = "~2.2"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
nibabel = "^5.2.1"
pytest = "^8.3.3"
pytest-timeout = "^2.3.1"
opacus = "^1.5.2"
rich = "^13.9.2"
lightning = "^2.4.0"
torchmetrics = "^1.4.3"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
