[project]
name = "thesis-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.29.0",
    "matplotlib>=3.9.2",
    "nibabel>=5.3.2",
    "notebook>=7.2.2",
    "numpy>=1.26,<2.0",
    "opacus>=1.5.2",
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "pytest-timeout>=2.3.1",
    "rich>=13.9.4",
    "torch<2.3",
    "lightning>=2.4.0",
    "torchmetrics>=1.5.2",
    "pytest-cov>=6.0.0",
    "torchvision>=0.17.2",
    "einops>=0.8.0",
    "torchsummary>=1.5.1",
    "dicom2nifti>=2.5.0",
    "scikit-learn>=1.5.2",
    "torch-fidelity>=0.3.0",
    "monai>=1.4.0",
    "huggingface-hub>=0.26.2",
    "transformers>=4.46.3",
    "seaborn>=0.13.2",
    "sympy>=1.13.3",
    "napari>=0.5.6",
    "pyqt5>=5.15.11",
    "nilearn>=0.11.1",
    "jax>=0.5.0",
    "jaxlib>=0.5.0",
]
